--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+certifi==2021.5.30
+charset-normalizer==2.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-WTF==0.14.3
 gunicorn==20.0.4
+idna==3.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 python-dotenv==0.15.0
+requests==2.26.0
+urllib3==1.26.6
 Werkzeug==1.0.1
 WTForms==2.3.3
